[package]
name = "wasm-web-audio-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.45"
console_error_panic_hook = "0.1.5"

[dependencies.web-audio-api]
git = "https://github.com/orottier/web-audio-api-rs"
branch = "feature/wasm"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]
